Fix overflow bug and add colour mode template

--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body {
   display: flex;
-  justify-content: left;
-  align-items: center;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  flex-wrap: wrap;
   margin: 0px;
   gap: 10px;
   padding: 20px;
@@ -9,9 +10,11 @@ body {
   border-style: solid;
   border-color: black;
   background-color: aliceblue;
+  height: 800x;
 }
 
 .grid {
+  flex: 0 0 auto;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -41,7 +44,7 @@ body {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  width: 20%;
+  width: 15%;
   height: 800px;
 }
 
